--- a/MDK-ARM/Quad_step_motor/Quad_step_motor.build_log.htm
+++ b/MDK-ARM/Quad_step_motor/Quad_step_motor.build_log.htm
@@ -22,80 +22,51 @@ Dialog DLL:      TCM.DLL V1.56.1.0
  
 <h2>Project:</h2>
 C:\Users\king\Desktop\STM32CubeIDEworkspace_1.8.0\Quad_step_motor\MDK-ARM\Quad_step_motor.uvprojx
-Project File Date:  08/02/2025
+Project File Date:  08/04/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Rebuild target 'Quad_step_motor'
 assembling startup_stm32f103xb.s...
-compiling stm32f1xx_hal_exti.c...
 compiling stm32f1xx_hal_cortex.c...
-compiling stm32f1xx_hal_flash_ex.c...
-compiling stm32f1xx_hal_rcc_ex.c...
-compiling stm32f1xx_hal_dma.c...
 compiling stm32f1xx_hal_spi.c...
-compiling stm32f1xx_it.c...
-..\User\LOG\user_log.h(55): warning:  #1-D: last line of file ends without a newline
-  #endif
-../Core/Src/stm32f1xx_it.c: 1 warning, 0 errors
 compiling stm32f1xx_hal_gpio.c...
-compiling stm32f1xx_hal.c...
-compiling stm32f1xx_hal_gpio_ex.c...
-compiling stm32f1xx_hal_flash.c...
-compiling stm32f1xx_hal_rcc.c...
+compiling stm32f1xx_hal_rcc_ex.c...
 compiling stm32f1xx_hal_pwr.c...
 compiling stm32f1xx_hal_msp.c...
-..\User\LOG\user_log.h(55): warning:  #1-D: last line of file ends without a newline
-  #endif
-../Core/Src/stm32f1xx_hal_msp.c: 1 warning, 0 errors
+compiling stm32f1xx_hal_flash_ex.c...
+compiling stm32f1xx_hal_dma.c...
+compiling stm32f1xx_hal.c...
+compiling stm32f1xx_hal_gpio_ex.c...
+compiling stm32f1xx_hal_rcc.c...
+compiling stm32f1xx_hal_flash.c...
+compiling stm32f1xx_hal_exti.c...
 compiling main.c...
-..\User\LOG\user_log.h(55): warning:  #1-D: last line of file ends without a newline
-  #endif
-../Core/Src/main.c: 1 warning, 0 errors
-compiling stm32f1xx_hal_tim.c...
-compiling user_init.c...
-..\User\LOG\user_log.h(55): warning:  #1-D: last line of file ends without a newline
-  #endif
-..\User\user_init.c: 1 warning, 0 errors
-compiling system_stm32f1xx.c...
-compiling uart.c...
-..\User\LOG\user_log.h(55): warning:  #1-D: last line of file ends without a newline
-  #endif
-..\User\UART\uart.c: 1 warning, 0 errors
-compiling software_Time.c...
-..\User\LOG\user_log.h(55): warning:  #1-D: last line of file ends without a newline
-  #endif
-..\User\software_Time.c(28): warning:  #1295-D: Deprecated declaration SetTime - give arg types
-   static __attribute__((constructor)) void SetTime();
-..\User\software_Time.c: 2 warnings, 0 errors
-compiling user_function.c...
-..\User\LOG\user_log.h(55): warning:  #1-D: last line of file ends without a newline
-  #endif
-..\User\user_function.c(7): warning:  #177-D: variable "uart1_send_buf"  was declared but never referenced
-  	uint8_t uart1_send_buf[20];
-..\User\user_function.c: 2 warnings, 0 errors
-compiling sys.c...
-..\User\LOG\user_log.h(55): warning:  #1-D: last line of file ends without a newline
-  #endif
-..\User\SYS\sys.c: 1 warning, 0 errors
-compiling stm32f1xx_hal_uart.c...
-compiling user_log.c...
-..\User\LOG\user_log.h(55): warning:  #1-D: last line of file ends without a newline
-  #endif
-..\User\LOG\user_log.h(55): warning:  #1-D: last line of file ends without a newline
-  #endif
-..\User\LOG\user_log.c(146): warning:  #1-D: last line of file ends without a newline
+compiling stm32f1xx_it.c...
+compiling pelco_d_protocol.c...
+..\User\pelco_d_protocol.c(221): warning:  #940-D: missing return statement at end of non-void function "PelcoD_GetCmdName" 
   }
-..\User\LOG\user_log.c: 3 warnings, 0 errors
-compiling control.c...
-..\User\LOG\user_log.h(55): warning:  #1-D: last line of file ends without a newline
-  #endif
-..\User\control.c: 1 warning, 0 errors
+..\User\pelco_d_protocol.c(246): warning:  #1-D: last line of file ends without a newline
+  }
+..\User\pelco_d_protocol.c(246): warning:  #940-D: missing return statement at end of non-void function "PelcoD_GetParseResultName" 
+  }
+..\User\pelco_d_protocol.c: 3 warnings, 0 errors
+compiling stm32f1xx_hal_tim.c...
+compiling system_stm32f1xx.c...
+compiling software_Time.c...
+compiling user_function.c...
+compiling sys.c...
+compiling user_log.c...
+compiling user_init.c...
+compiling uart.c...
+compiling pelco_d_integration_example.c...
 compiling stm32f1xx_hal_tim_ex.c...
+compiling stm32f1xx_hal_uart.c...
+compiling control.c...
 linking...
-Program Size: Code=20156 RO-data=912 RW-data=252 ZI-data=3884  
+Program Size: Code=26312 RO-data=1076 RW-data=472 ZI-data=3888  
 FromELF: creating hex file...
-"Quad_step_motor\Quad_step_motor.axf" - 0 Error(s), 14 Warning(s).
+"Quad_step_motor\Quad_step_motor.axf" - 0 Error(s), 3 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -119,7 +90,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE:5.6.0
       Include file:  CMSIS/Core/Include/tz_context.h
-Build Time Elapsed:  00:00:09
+Build Time Elapsed:  00:00:07
 </pre>
 </body>
 </html>
