--- a/MDK-ARM/Quad_step_motor/Quad_step_motor.build_log.htm
+++ b/MDK-ARM/Quad_step_motor/Quad_step_motor.build_log.htm
@@ -22,27 +22,27 @@ Dialog DLL:      TCM.DLL V1.56.1.0
  
 <h2>Project:</h2>
 C:\Users\king\Desktop\STM32CubeIDEworkspace_1.8.0\Quad_step_motor\MDK-ARM\Quad_step_motor.uvprojx
-Project File Date:  08/04/2025
+Project File Date:  08/14/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Rebuild target 'Quad_step_motor'
 assembling startup_stm32f103xb.s...
-compiling stm32f1xx_hal_cortex.c...
-compiling stm32f1xx_hal_spi.c...
-compiling stm32f1xx_hal_gpio.c...
 compiling stm32f1xx_hal_rcc_ex.c...
-compiling stm32f1xx_hal_pwr.c...
-compiling stm32f1xx_hal_msp.c...
+compiling stm32f1xx_hal_flash.c...
 compiling stm32f1xx_hal_flash_ex.c...
+compiling stm32f1xx_hal_gpio.c...
 compiling stm32f1xx_hal_dma.c...
+compiling stm32f1xx_hal_pwr.c...
+compiling stm32f1xx_hal_cortex.c...
 compiling stm32f1xx_hal.c...
 compiling stm32f1xx_hal_gpio_ex.c...
-compiling stm32f1xx_hal_rcc.c...
-compiling stm32f1xx_hal_flash.c...
 compiling stm32f1xx_hal_exti.c...
-compiling main.c...
+compiling stm32f1xx_hal_rcc.c...
 compiling stm32f1xx_it.c...
+compiling main.c...
+compiling stm32f1xx_hal_msp.c...
+compiling stm32f1xx_hal_spi.c...
 compiling pelco_d_protocol.c...
 ..\User\pelco_d_protocol.c(221): warning:  #940-D: missing return statement at end of non-void function "PelcoD_GetCmdName" 
   }
@@ -52,21 +52,30 @@ compiling pelco_d_protocol.c...
   }
 ..\User\pelco_d_protocol.c: 3 warnings, 0 errors
 compiling stm32f1xx_hal_tim.c...
-compiling system_stm32f1xx.c...
-compiling software_Time.c...
-compiling user_function.c...
-compiling sys.c...
-compiling user_log.c...
 compiling user_init.c...
+compiling system_stm32f1xx.c...
+compiling user_function.c...
+..\User\user_function.c(66): warning:  #1295-D: Deprecated declaration test_PositionControl - give arg types
+  void test_PositionControl();
+..\User\user_function.c(67): warning:  #1295-D: Deprecated declaration PelcoD_1msTimerHandler - give arg types
+  void PelcoD_1msTimerHandler();
+..\User\user_function.c: 2 warnings, 0 errors
 compiling uart.c...
+compiling user_log.c...
 compiling pelco_d_integration_example.c...
-compiling stm32f1xx_hal_tim_ex.c...
-compiling stm32f1xx_hal_uart.c...
+compiling sys.c...
+compiling software_Time.c...
+compiling code.c...
+code.c(1761): warning:  #1-D: last line of file ends without a newline
+  };
+code.c: 1 warning, 0 errors
 compiling control.c...
+compiling stm32f1xx_hal_uart.c...
+compiling stm32f1xx_hal_tim_ex.c...
 linking...
-Program Size: Code=26312 RO-data=1076 RW-data=472 ZI-data=3888  
+Program Size: Code=26740 RO-data=15252 RW-data=384 ZI-data=3888  
 FromELF: creating hex file...
-"Quad_step_motor\Quad_step_motor.axf" - 0 Error(s), 3 Warning(s).
+"Quad_step_motor\Quad_step_motor.axf" - 0 Error(s), 6 Warning(s).
 
 <h2>Software Packages used:</h2>
 
